[package]
name = "aflpp_custom_mutator"
version = "0.1.0"
authors = ["Julius Hohnerlein <julihoh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aflpp_custom_mutator-sys = { path = "../aflpp_custom_mutator-sys" }
